codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__empty_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: "render_view(&view(Vec::new()), 70)"
---

  Background
  No active processes

  No tasks currently running

  ↑/↓ select · Enter view · x stop · Esc close
