codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__monitor_loading_output_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: "render_view(&view(vec![monitor]), 70)"
---

  Monitor details

  Status: Running
  Runtime: 12s
  Script: tail -f app.log

  Output:
  Loading output…
