codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__monitor_poll_error_preserves_last_output_but_marks_it_stale_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: rendered
---

  Monitor details

  Status: Running
  Runtime: 12s
  Script: tail -f app.log

  Output:
   ╭──────────────────────────────────────────────────────────────╮
   │ ready                                                        │
   │ secret from stderr                                           │
   │                                                              │
   │                                                              │
   │                                                              │
   │                                                              │
   │                                                              │
   │                                                              │
   │                                                              │
   │                                                              │
   ╰──────────────────────────────────────────────────────────────╯

  Showing 2 lines · stale; refresh paused; reopen to retry
