codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__monitor_poll_error_suspended_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: rendered
---

  Monitor details

  Status: Running
  Runtime: 12s
  Script: tail -f app.log

  Output:
  Output unavailable · refresh paused; reopen to retry
