codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__process_list_ansi_tabs_narrow_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: rendered
---

  Background
  1 shell, 1 monitor active

  › 监 控     🚀  (running)
    npm run dev (running)

  ↑/↓ · Enter · x stop · Esc
