codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__shell_local_line_truncation_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: rendered
---

  Shell details

  Status: Running
  Runtime: 4s
  Command: npm run dev

  Output:
   ╭──────────────────────────────────────────────────────────────╮
   │ line3                                                        │
   │ line4                                                        │
   │ line5                                                        │
   │ line6                                                        │
   │ line7                                                        │
   │ line8                                                        │
   │ line9                                                        │
   │ line10                                                       │
   │ line11                                                       │
   │ line12                                                       │
   ╰──────────────────────────────────────────────────────────────╯

  Showing last 10 lines · earlier lines hidden
