codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__background_processes_view__tests__shell_no_output_detail_snapshot.snap
---
source: tui/src/bottom_pane/background_processes_view.rs
expression: "render_view(&view, 70)"
---

  Shell details

  Status: Running
  Runtime: 4s
  Command: npm run dev

  Output:
  No output available
